# rebyua

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: app.rs  cli.rs  clipboard.rs  export.rs  git.rs  main.rs  model.rs  updater.rs
