[package]
name = "rebyua"
version = "0.1.0"
edition = "2024"
description = "Lightweight diff reviewer"
license = "MIT"
readme = "README.md"
default-run = "reb"

[[bin]]
name = "reb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1.1.4"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
tar = "0.4.44"
tempfile = "3.23.0"
