[package]
name = "rebyua"
version = "0.4.0"
edition = "2024"
description = "Lightweight diff reviewer"
license = "MIT"
readme = "README.md"
default-run = "reb"

[[bin]]
name = "reb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1.1.9"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tar = "0.4.45"
tempfile = "3.27.0"
